assets/styles.css
/* @import "../node_modules/modern-normalize/modern-normalize.css"; */

/** transition source: https://stackoverflow.com/questions/47798256/animate-div-to-full-screen-size-from-current-position-on-click-click-again-to-a */

/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 4 version
*/

:root {
	--section-height: 4rem;
	--max-width: 37.5rem;
	--h3-vert-margin: 18.203px;
}

html,
body {
	height: 100%;
}

body {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	font-family: "Roboto", sans-serif;
	justify-content: center;
	min-width: 320px;
}

.app {
	position: relative;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: flex-end;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

section {
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	color: white;
	cursor: pointer;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	position: relative;
	height: var(--section-height);
	-webkit-transition: height 0.75s ease;
	-o-transition: height 0.75s ease;
	transition: height 0.75s ease;
	overflow: hidden;
	text-align: center;
	width: 100%;
	z-index: 5;
}

p {
	line-height: 1.5;
}

#about-section {
	background-color: #999999;
}
#projects-section {
	background-color: #666666;
}
#skills-section {
	background-color: #333333;
}
#contact-section {
	background-color: #000000;
}

.child-expanded section {
	height: 0;
}

section.section-expanded {
	cursor: auto;
	height: 100%;
}

header {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	left: 0;
	padding: 1rem;
	position: absolute;
	right: 0;
	top: 0;
}

h1,
h3,
h4,
h5 {
	font-family: "Oswald", sans-serif;
}

h1 {
	font-size: 1.5rem;
	margin: 0;
}

h2 {
	font-size: 1rem;
	font-weight: 400;
	margin: 0.25rem 0 0 0;
}

h3 {
	font-size: 1.5em;
	margin-top: var(--h3-vert-margin);
	margin-bottom: var(--h3-vert-margin);

	display: block;
	-webkit-margin-start: 0px;
	margin-inline-start: 0px;
	-webkit-margin-end: 0px;
	margin-inline-end: 0px;
	font-weight: bold;
	/** <h1> default styles  */

	pointer-events: none;
	-webkit-transition: -webkit-transform 1s ease;
	transition: -webkit-transform 1s ease;
	-o-transition: transform 1s ease;
	transition: transform 1s ease;
	transition: transform 1s ease, -webkit-transform 1s ease;
}

section.section-expanded > h3 {
	-webkit-transform: scale(calc(2 / 1.5));
	-ms-transform: scale(calc(2 / 1.5));
	transform: scale(calc(2 / 1.5));
}

h4 {
	display: block;
	font-size: 1.5em;
	-webkit-margin-before: 0.83em;
	margin-block-start: 0.83em;
	-webkit-margin-after: 0.83em;
	margin-block-end: 0.83em;
	-webkit-margin-start: 0px;
	margin-inline-start: 0px;
	-webkit-margin-end: 0px;
	margin-inline-end: 0px;
	font-weight: bold;
	/** <h2> default styles */
}

h5 {
	font-size: 1.25rem;
	margin-bottom: 1rem;
	margin-top: 1rem;
}

.external-links {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	list-style-type: none;
	margin: 0;
}

.external-links > li:nth-child(1) {
	margin-right: 1.5rem;
}

.exit-button {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	background: 0;
	border: 0;
	border-radius: 50%;
	cursor: pointer;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	height: 1.75rem;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	opacity: 0;
	padding: 0;
	position: absolute;
	right: 1rem;
	top: var(--h3-vert-margin);
	-webkit-transition: opacity 0.5s ease 0.5s;
	-o-transition: opacity 0.5s ease 0.5s;
	transition: opacity 0.5s ease 0.5s;
	visibility: hidden;
	-webkit-tap-highlight-color: transparent;
	width: 1.75rem;
}

.exit-button * {
	pointer-events: none;
}

section.section-expanded .exit-button {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	opacity: 1;
	visibility: visible;
}

.section-content {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-flex: 1;
	-ms-flex: 1;
	flex: 1;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	opacity: 0;
	-webkit-transition: opacity 0.5s ease 0.5s;
	-o-transition: opacity 0.5s ease 0.5s;
	transition: opacity 0.5s ease 0.5s;
}

section.section-expanded .section-content {
	opacity: 1;
}

#about-content {
	overflow-y: scroll;
}

#about-content > p {
	margin: 0 2rem 1rem 2rem;
	max-width: var(--max-width);
	text-align: left;
}

#about-content > p:nth-child(1) {
	margin-top: 1rem;
}

#projects-content {
	overflow: scroll;
}

.projects-wrapper {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	overflow-y: scroll;
	width: 100%;
}

.project {
	margin: 1rem;
	margin-bottom: 5rem;
	max-width: var(--max-width);
	text-align: left;
}

.project-titles-list {
	-ms-flex-item-align: end;
	align-self: flex-end;
	list-style: none;
	margin-right: 1rem;
	text-align: end;
}

.project-title {
	margin: 0.5rem 0;
}

.project-video-container {
	background-color: #000000;
	margin-left: 1.5rem;
}

.project-video {
	display: block;
	width: 100%;
}

.project-description,
.project-link {
	margin-left: 1.5rem;
}

.project-key-features {
	line-height: 1.5;
	margin-left: 1.5rem;
}

.project-key-features > li {
	margin-bottom: 0.25rem;
}

.project-link {
	background-color: white;
}

/* Skills Section */
#skills-content {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	overflow-y: scroll;
}
.skills-grid {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	display: -ms-grid;
	display: grid;
	-webkit-box-flex: 1;
	-ms-flex: 1;
	flex: 1;
	grid-template-columns: repeat(
		auto-fit,
		minmax(0, min(100%/3, max(22rem/3, 100%/4)))
	);
	-webkit-box-pack: space-evenly;
	-ms-flex-pack: space-evenly;
	justify-content: space-evenly;
	justify-items: center;
	width: 100%;
}

.skill-wrapper {
	align-items: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* Contact Form */
#contact-content {
	padding: 1rem;
	overflow-y: scroll;
}

form#fs-frm {
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-flex: 1;
	-ms-flex: 1;
	flex: 1;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	max-width: var(--max-width);
	width: 100%;
}

fieldset#fs-frm-inputs {
	-webkit-box-align: stretch;
	-ms-flex-align: stretch;
	align-items: stretch;
	border: 0;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-flex: 1;
	-ms-flex: 1;
	flex: 1;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	text-align: left;
	width: 100%;
}

fieldset#fs-frm-inputs label {
	font-weight: bold;
	margin-bottom: 0.25rem;
}

fieldset#fs-frm-inputs input,
textarea {
	background: transparent;
	border: 0;
	border-bottom: solid white 1px;
	border-radius: 0;
	color: white;
	margin-top: 0.25rem;
	margin-bottom: 1.5rem;
	padding: 0.5rem;
}

input[type="submit"] {
	-ms-flex-item-align: stretch;
	-ms-grid-row-align: stretch;
	align-self: stretch;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	cursor: pointer;
	margin: 1rem;
	padding: 0.75rem;
}

fieldset#fs-frm-inputs input::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
	color: white;
}

fieldset#fs-frm-inputs input::-moz-placeholder,
textarea::-moz-placeholder {
	color: white;
}

fieldset#fs-frm-inputs input:-ms-input-placeholder,
textarea:-ms-input-placeholder {
	color: white;
}

fieldset#fs-frm-inputs input::-ms-input-placeholder,
textarea::-ms-input-placeholder {
	color: white;
}

fieldset#fs-frm-inputs input::placeholder,
textarea::placeholder {
	color: white;
}

@media (max-width: 391px) {
	.external-links {
		-webkit-box-orient: vertical;
		-webkit-box-direction: normal;
		-ms-flex-direction: column;
		flex-direction: column;
		padding-left: 0;
	}

	.external-links > li:nth-child(1) {
		margin-bottom: 1rem;
		margin-right: 0;
	}
}

@media (min-width: 740px) {
	#about-content > p {
		font-size: 1.25rem;
	}
}

@media screen and (max-height: 430px) and (orientation: landscape) {
	.project {
		max-width: 33rem;
	}

	.skill-wrapper {
		transform: scale(0.75);
	}
}

